--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -11,4 +11,12 @@
         <servlet-name>imageServlet</servlet-name>
         <url-pattern>/imageServlet</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <servlet-name>CheckServlet</servlet-name>
+        <servlet-class>CheckServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>CheckServlet</servlet-name>
+        <url-pattern>/checkServlet</url-pattern>
+    </servlet-mapping>
 </web-app>
